--- a/git.html
+++ b/git.html
@@ -52,81 +52,6 @@
   </ul>
 </p>
 
-<!-- LIGNES DE COMMANDE -->
-
-<h3>Lignes de commande standard pour Ubuntu</h3>
-
-  <p>Toutes les lignes de commande s'exécutent à partir du dossier courant dans lequel se trouve le fichier cible.</p>
-<table>
-  <tr> <th> Objectif</th> <th> Instruction</th> </tr>
-  <tr> <td> se déplacer dans le dossier <em>Documents</em> </td> <td> <pre>cd Documents</pre> </td> </tr>
-  <tr> <td> revenir au dossier parent </td> <td> <pre>cd ..</pre></td> </tr>
-  <tr> <td> revenir à la racine </td> <td> <pre>cd</pre></td> </tr>
-  <tr> <td> trouver <em>monFichier</em></td> <td><pre>whereis monFichier</pre></td></tr>
-  <tr> <td> afficher la liste des éléments du dossier local </td> <td> <pre>ls</pre></td> </tr>
-  <tr> <td> afficher la liste des éléments actifs du dossier local </td> <td> <pre>ps</pre></td> </tr>
-  <tr> <td> créer le fichier <em>monFichier</em> </td> <td> <pre>touch monFichier</pre></td> </tr>
-  <tr> <td> créer le dossier <em>monDossier</em> </td> <td> <pre>mkdir monDossier</pre></td> </tr>
-  <tr> <td> vider le terminal <em>monFichier</em> </td> <td> <pre>clear</pre></td> </tr>
-  <tr> <td> ouvrir <em>monFichier</em> qui se trouve dans le répertoire courant </td> <td> <pre>./monFichier</pre></td> </tr>
-  <tr> <td> supprimer <em>monFichier</em> </td> <td><pre>rm monFichier</pre></td></tr>
-  <tr> <td> supprimer <em>monDossier</em></td> <td><pre>rm -r monDossier</pre></td></tr>
-  <tr> <td> déplacer <em>monFichier</em></td> <td><pre>mv chemin_monFichier  chemin _nouvelEmplacement</pre></td></tr>
-  <tr> <td> stopper l'exécution d'un code ou d'un serveur </td><td><pre>Ctrl+c</pre></td></tr>
-  <tr> <td> nettoyer le disque</td> <td><pre>sudo apt-get autoclean
-sudo apt-get clean
-sudo apt-get auroremove</pre></td></tr>
-  <tr> <td> lancer l'interpréteur Python </td> <td><pre>python3</pre></td></tr>
-  <tr> <td> supprimer <em>monApplication</em></td> <td><pre>sudo apt-get remove monApplication</pre></td></tr>
-</table>
-
-<p>Attention, pour ouvrir un fichier du répertoire courant, l'appel direct de monFichier est insuffisant. Il faut d'abord rajouter le chemin local, qui force la connexion.</p>
-
-  <h4>Installation d'un logiciel à partir d'un fichier .tar.gz</h4>
-
-  <p>Un fichier .tar est une archive non compressée. En revanche, un fichier .gz est une compression de fichier.</p>
-  <p>Il faut d'abord déplacer le fichier .tar.gz vers /usr/local. Pour cela :</p>
-  <pre>mv /home/stephane/Téléchargements/nom_fichier.tar.gz /usr/local</pre>
-  <p>Il faut ensuite se placer dans le répertoire /usr/local</p>
-  <pre>cd /usr/local</pre>
-  <p>Puis il faut décompresser le fichier .gz :</p>
-  <pre>tar xvzf nom_fichier.tar.gz</pre>
-
-  <p>Finalement, il faut suivre les instructions d'installation dans le ficier README.txt ou le INSTALL</p>
-
-  <h4>Installation d'un logiciel à partir d'un fichier .tar.bz2</h4>
-
-  <p>Il faut d'abord déplacer le fichier .tar.bz2 vers /usr/local. Pour cela :</p>
-  <pre>mv /home/stephane/Téléchargements/nom_fichier.tar.bz2 /usr/local</pre>
-  <p>Il faut ensuite se placer dans le répertoire /usr/local</p>
-  <pre>cd /usr/local</pre>
-  <p>Puis il faut décompresser le fichier .bz2 :</p>
-  <pre>tar xfvj nom_fichier.tar.bz2</pre>
-
-  <p>Finalement, il faut suivre les instructions d'installation dans le ficier README.txt ou le INSTALL</p>
-
-  <h4>Installation d'un logiciel à partir d'un fichier .deb</h4>
-
-  <p>Un fichier .deb est un package permettant d'installer une application sous les systèmes Linux Debian.</p>
-
-  <p>Il faut d'abord déplacer le fichier .tar.bz2 vers /usr/local. Pour cela :</p>
-  <pre>mv /home/stephane/Téléchargements/nom_fichier.tar.bz2 /usr/local</pre>
-  <p>Il faut ensuite se placer dans le répertoire /usr/local</p>
-  <pre>cd /usr/local</pre>
-
-  <p>Puis il faut exécuter le fichier .deb</p>
-  <pre>dpkg -i nom_fichier.deb</pre>
-
-  <h4>Mise à niveau système</h4>
-
-<pre>sudo apt-get update
-sudo apt-get upgrade
-sudo apt dist-upgrade
-sudo apt-get install update-manager-core
-sudo do-release-upgrade
-sudo apt-get update</pre>
-
-
 
 <!-- CONFIGURATION -->
 
@@ -303,6 +228,89 @@ git merge nomBranche</pre>
 
 <p>Pour sortir de <em>vim</em> :</p>
 <pre>:q</pre>
+
+  <!-- LIGNES DE COMMANDE -->
+
+  <h3>Lignes de commande standard pour Ubuntu</h3>
+
+  <p>Toutes les lignes de commande s'exécutent à partir du dossier courant dans lequel se trouve le fichier cible.</p>
+  <table>
+    <tr> <th> Objectif</th> <th> Instruction</th> </tr>
+    <tr> <td> se déplacer dans le dossier <em>Documents</em> </td> <td> <pre>cd Documents</pre> </td> </tr>
+    <tr> <td> revenir au dossier parent </td> <td> <pre>cd ..</pre></td> </tr>
+    <tr> <td> revenir à la racine </td> <td> <pre>cd</pre></td> </tr>
+    <tr> <td> trouver <em>monFichier</em></td> <td><pre>whereis monFichier</pre></td></tr>
+    <tr> <td> afficher la liste des éléments du dossier local </td> <td> <pre>ls</pre></td> </tr>
+    <tr> <td> afficher la liste détaillée des éléments du dossier local </td> <td> <pre>ls -l</pre></td> </tr>
+    <tr> <td> afficher la liste des éléments actifs du dossier local </td> <td> <pre>ps</pre></td> </tr>
+    <tr> <td> créer le fichier <em>monFichier</em> </td> <td> <pre>touch monFichier</pre></td> </tr>
+    <tr> <td> créer le dossier <em>monDossier</em> </td> <td> <pre>mkdir monDossier</pre></td> </tr>
+    <tr> <td> vider le terminal <em>monFichier</em> </td> <td> <pre>clear</pre></td> </tr>
+    <tr> <td> ouvrir <em>monFichier</em> qui se trouve dans le répertoire courant </td> <td> <pre>./monFichier</pre></td> </tr>
+    <tr> <td> supprimer <em>monFichier</em> </td> <td><pre>rm monFichier</pre></td></tr>
+    <tr> <td> supprimer <em>monDossier</em></td> <td><pre>rm -r monDossier</pre></td></tr>
+    <tr> <td> déplacer <em>monFichier</em></td> <td><pre>mv chemin_monFichier  chemin _nouvelEmplacement</pre></td></tr>
+    <tr> <td> stopper l'exécution d'un code ou d'un serveur </td><td><pre>Ctrl+c</pre></td></tr>
+    <tr> <td> nettoyer le disque</td> <td><pre>sudo apt-get autoclean
+sudo apt-get clean
+sudo apt-get auroremove</pre></td></tr>
+    <tr> <td> lancer l'interpréteur Python </td> <td><pre>python3</pre></td></tr>
+    <tr> <td> supprimer <em>monApplication</em></td> <td><pre>sudo apt-get remove monApplication</pre></td></tr>
+  </table>
+
+  <p>Attention, pour ouvrir un fichier du répertoire courant, l'appel direct de monFichier est insuffisant. Il faut d'abord rajouter le chemin local, qui force la connexion.</p>
+
+  <h4>Installation d'un logiciel à partir d'un fichier .tar.gz</h4>
+
+  <p>Un fichier .tar est une archive non compressée. En revanche, un fichier .gz est une compression de fichier.</p>
+  <p>Il faut d'abord déplacer le fichier .tar.gz vers /usr/local. Pour cela :</p>
+  <pre>mv /home/stephane/Téléchargements/nom_fichier.tar.gz /usr/local</pre>
+  <p>Il faut ensuite se placer dans le répertoire /usr/local</p>
+  <pre>cd /usr/local</pre>
+  <p>Puis il faut décompresser le fichier .gz :</p>
+  <pre>tar xvzf nom_fichier.tar.gz</pre>
+
+  <p>Finalement, il faut suivre les instructions d'installation dans le ficier README.txt ou le INSTALL</p>
+
+  <h4>Installation d'un logiciel à partir d'un fichier .tar.bz2</h4>
+
+  <p>Il faut d'abord déplacer le fichier .tar.bz2 vers /usr/local. Pour cela :</p>
+  <pre>mv /home/stephane/Téléchargements/nom_fichier.tar.bz2 /usr/local</pre>
+  <p>Il faut ensuite se placer dans le répertoire /usr/local</p>
+  <pre>cd /usr/local</pre>
+  <p>Puis il faut décompresser le fichier .bz2 :</p>
+  <pre>tar xfvj nom_fichier.tar.bz2</pre>
+
+  <p>Finalement, il faut suivre les instructions d'installation dans le ficier README.txt ou le INSTALL</p>
+
+  <h4>Installation d'un logiciel à partir d'un fichier .deb</h4>
+
+  <p>Un fichier .deb est un package permettant d'installer une application sous les systèmes Linux Debian.</p>
+
+  <p>Il faut d'abord déplacer le fichier .tar.bz2 vers /usr/local. Pour cela :</p>
+  <pre>mv /home/stephane/Téléchargements/nom_fichier.tar.bz2 /usr/local</pre>
+  <p>Il faut ensuite se placer dans le répertoire /usr/local</p>
+  <pre>cd /usr/local</pre>
+
+  <p>Puis il faut exécuter le fichier .deb</p>
+  <pre>dpkg -i nom_fichier.deb</pre>
+
+  <h4>Mise à niveau système</h4>
+
+  <pre>sudo apt-get update
+sudo apt-get upgrade
+sudo apt dist-upgrade
+sudo apt-get install update-manager-core
+sudo do-release-upgrade
+sudo apt-get update</pre>
+
+  <h4>Créer une clé bootable</h4>
+
+  <ol>
+    <li>télécharger le fichier iso de la version souhaitée de Ubuntu sur un ordinateur</li>
+    <li>configurer une clé bootable sur le site balena.io. Pour cela, chercher balenaetcher, lancer l'application et choisir une clé USB comme cible. Il est important de ne connecter qu'une seule clé à l'ordinateur</li>
+    <li>brancher la clé bootable sur l'ordinateur cible, démarrer l'ordinateur en ouvrant le bios (souvent la touche f12 ou f2), configurer le lancement du système sur clé USB</li>
+  </ol>
 
 </section>
 <footer>
